# BD-Rust-Hackathon-Sept-2023

./: .env  Cargo.toml  Makefile  README.md
deployment/db/: db.yml
migrations/: 0001_create_subscriptions_table.sql  0001_create_tables.sql
src/: main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  users.rs
