[package]
name = "tard_fi_data"
version = "0.1.0"
edition = "2021"

[lib]
name = "tard_fi_data"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tard_fi_data"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
env_logger = "0.9"
log = "0.4"


[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]